# LearnOpenGL

./: .clang-format  CMakeLists.txt  Containerfile.dev  Containerfile.dev-hosting  README.md  compose.yaml  entrypoint.sh  nginx.conf
.devcontainer/: devcontainer.json
assets/shaders/: fragment.glsl  vertex.glsl
src/: main.cpp  shader.hpp
src/shaders/: vertex.glsl
web/: index.html
